update layout anti virus 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="clipboard">Clipboard</string>
     <string name="process_moniter">Process Moniter</string>
     <string name="battery_info">Battery Info</string>
+    <string name="temp_dettect">Temp Dettect</string>
 </resources>
