refactor & edit code.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,12 @@
     <string name="process">Process Moniter</string>
     <string name="battery_info">Battery Info</string>
     <string name="temp_dettect">Temp Dettect</string>
+    <string name="content_article">Thủ tướng Phạm Minh Chính mong muốn ông Takebe tiếp tục góp phần cụ thể hóa Quan hệ Đối tác Chiến lược Toàn diện Việt Nam - Nhật Bản với những dự án, chương trình cụ thể.
+Chiều 14/3, tại Trụ sở Chính phủ, Thủ tướng Phạm Minh Chính đã tiếp ông Takebe Tsutomu - Cố vấn Đặc biệt Liên minh Nghị sỹ hữu nghị Nhật Bản - Việt Nam đang có chuyến thăm và làm việc tại Việt Nam.
+
+Vui mừng gặp lại ngài Takebe Tsutomu, người bạn thân thiết của nhân dân Việt Nam, Thủ tướng Phạm Minh Chính nhắc lại những ấn tượng rất tốt đẹp về cuộc gặp với Ban Lãnh đạo Liên minh Nghị sỹ hữu nghị Nhật Bản - Việt Nam trong chuyến công tác tại Nhật Bản tháng 12/2023.
+
+Ông Takebe cho biết ông đang có chuyến thăm Việt Nam với tư cách Trưởng Ban danh dự của Lễ hội Nhật - Việt lần thứ 9 tại TP.HCM, đồng thời thăm, làm việc tại một số địa phương như tỉnh Quảng Ninh, TP.HCM.</string>
+    <string name="content_article_2">content article 2\n hello\n hello 2 \n1996 \n2000\n hello</string>
+
 </resources>
